<resources>
    <string name="app_name">Swapi Do</string>

    <string name="people">People</string>
    <string name="films">Films</string>
    <string name="planets">Planets</string>
    <string name="starships">Starships</string>



    <!--    People -->
    <string name="name">Name</string>
    <string name="height">Height</string>
    <string name="mass">Mass</string>
    <string name="hair_color">Hair Color</string>
    <string name="birth_year">Birth Year</string>
    <string name="films_count">Films</string>
    <string name="vehicles">Vehicles</string>
    <string name="startships">Starships</string>


    <!--  Film -->
    <string name="f_title">Title</string>
    <string name="f_episode_id">Episode Id</string>
    <string name="f_opening_Crawl">Crawl</string>
    <string name="f_release_date">Release Date</string>
    <string name="f_director">Director</string>


    <string name="service_error">Oops! Star Ship has gone offline, please try again after sometime</string>
</resources>
